# DnD_Editor

./: CMakeLists.txt  README.md
Characters/: Gimli.xml  test.xml
data_files/: Classes.xml  Feats.xml  Races.xml  Skills.xml
src/: CharClass.cpp  CharClass.h  Character.cpp  Character.h  Head.cpp  Head.h  RuleClass.cpp  RuleClass.h  SystemManager.cpp  SystemManager.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp
